[tool.poetry]
name = "sdlc_agents"
version = "0.1.0"
description = "sdlc_agents using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.51.0,<1.0.0" }


[tool.poetry.scripts]
sdlc_agents = "sdlc_agents.main:run"
run_crew = "sdlc_agents.main:run"
train = "sdlc_agents.main:train"
replay = "sdlc_agents.main:replay"
test = "sdlc_agents.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
