[tool.poetry]
name = "research_agents"
version = "0.1.0"
description = "research-agents using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
research_agents = "research_agents.main:run"
run_crew = "research_agents.main:run"
train = "research_agents.main:train"
replay = "research_agents.main:replay"
test = "research_agents.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
