[project]
name = "research_agents"
version = "0.1.0"
description = "research_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
research_agents = "research_agents.main:run"
run_crew = "research_agents.main:run"
train = "research_agents.main:train"
replay = "research_agents.main:replay"
test = "research_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
